[package]
name = "tlq"
version = "0.1.0"
edition = "2021"
authors = ["Nebojsa Jakovljevic nebojsa@nebjak.dev"]
license = "MIT"
description = "Tiny Little Queue"

[[bin]]
name = "tlq"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/mod.rs"

[dependencies]
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1" , features = ["full"]}
axum = "0.8"
skyak_axum_core = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"

[dev-dependencies]
http = "1.3"
mime = "0.3"
tower = "0.5"
http-body-util = "0.1"
regex = "1.11"