[package]
name = "tlq"
version = "0.4.0"
edition = "2021"
authors = ["Nebojsa Jakovljevic nebojsa@nebjak.dev"]
license = "MIT"
description = "Tiny Little Queue"

[[bin]]
name = "tlq"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/mod.rs"

[dependencies]
uuid = { version = "1.22", features = ["v7", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
tokio = { version = "1.50", features = ["full"] }
axum = "0.8.8"
skyak_axum_core = "0.2.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1.0.149"

[dev-dependencies]
http = "1.4.0"
mime = "0.3.17"
tower = "0.5.3"
http-body-util = "0.1.3"
regex = "1.12.3"